fix header image on mobile screens

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -240,6 +240,8 @@ blockquote {
   background-color: $secondary;
   box-shadow: none;
   padding: .5rem 0;
+  
+  max-height: 66px;
 
   .container {
     display: flex;
@@ -278,15 +280,16 @@ blockquote {
 
 .logo-mobile {
   display: block;
-  width: 30px;
+  height: 100%;
 
   @include media-breakpoint-up(sm) {
     display: none;
   }
 
   img {
-    width: 100%;
-    height: auto;
+    max-height: 100%;
+    height: 100%;
+    width: auto;
   }
 
   a {
@@ -851,7 +854,7 @@ $button-width: 35px;
 }
 
 #main-with-sidebar {
-  $sidebar-width: 400px;
+  $sidebar-width: 350px;
   display: flex;
   flex-flow: row nowrap;
   padding-left: 2em;
